<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="app_activities">
        <item>@string/activityName_events</item>
        <item>@string/activityName_teams</item>
        <item>@string/activityName_notifications</item>
    </string-array>

    <!-- Main Activity -->
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activityName_notifications">Notifications</string>
    <string name="activityName_teams">Teams</string>
    <string name="activityName_events">Events</string>

    <!-- Global Menu Actions -->
    <string name="action_about">About</string>

    <!-- Pages Menu Actions -->
    <string name="action_search">Search</string>
    <string name="action_addItem">Add Item</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>

    <!-- Context Actions -->
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <!-- TeamsMaintenance Page Fragment -->
    <string name="no_teams">No teams to show</string>
    <string name="teamsMaintenance_titleLabel">Teams</string>
    <string name="teamsMaintenance_collectionNameHint">(Mandatory)</string>
    <string name="teamsMaintenance_collectionDescriptionHint">(Optional)</string>
    <string name="teamsMaintenance_collectionKeyHint">(Optional)</string>
    <string name="teamsMaintenance_titleDescriptionLabel">Please, provide a team name and an optional image.</string>

    <!-- EventsMaintenance Page Fragment -->
    <string name="no_events">No events to show</string>

    <!-- EventsMaintenance Page 2 Fragment -->
    <string name="date_year">Year</string>
    <string name="date_day">Day</string>
    <string name="date_month">Month</string>
    <string name="date_weekDay">Day of week</string>
    <string name="date_timeLabel">Selected Time</string>
    <string name="pick_date">Please pick a date.</string>
    <string name="pick_date_error">Sorry, the date you chose is not valid.</string>
    <string name="pick_time">Please pick time.</string>
    <string name="pick_time_error">Sorry, the time you chose is not valid.</string>
    <string name="pick_timeZone">Please pick a time zone.</string>
    <string name="timeZone_label">Time zone</string>
    <string name="dateFrom_label">From</string>
    <string name="dateTo_label">To</string>
    <string name="repetition_label">Repetition</string>

    <!-- EventsMaintenance Page 3 Fragment -->
    <string name="maps_to">To</string>
    <string name="maps_from">From</string>
    <string name="loading_maps_error">Sorry, unable to load maps</string>

    <!-- Notifications Page Fragment -->
    <string name="no_notifications">No notifications to show</string>


    <!-- Others -->
    <string name="app_name">iTeammates</string>
    <string name="alphabet">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ1234567890</string>
    <string name="emptyString"/>
    <string name="name">Name</string>
    <string name="LookupKey">Lookup Key</string>

    <string name="selectPicture">Please Select a Picture</string>
    <string name="action_finish">Done</string>
    <string name="no_entity_name">It is required to set a name on this step.</string>
    <string name="no_selected_contacts">Every team must have a least one member</string>
    <string name="update_prefix">Last Update: %s</string>
    <string name="creation_prefix">Created at: %s</string>
    <string name="teamsPage_actionTitle">Teams Actions</string>
    <string name="eventsMaintenance_titleLabel">Events</string>
    <string name="eventsMaintenance_titleDescriptionLabel">Please, provide an event name, a description, and an optional image.</string>
    <string name="description">Description</string>
    <string name="action_next">Next</string>
    <string name="eventsMaintenance_titleControlLabel">Calendar</string>
    <string name="eventsMaintenance_lookupHint">Lookup key</string>
    <string name="eventsMaintenance_lookupLabel">Participant Name</string>
    <string name="eventsMaintenance_lookupTitle1_hint">Type name</string>
    <string name="eventsMaintenance_lookupTitle1_label">Event Name</string>
    <string name="eventsMaintenance_DescriptionLabel">Description</string>
    <string name="eventsMaintenance_descriptionHint">Type Description</string>
    <string name="no_participants">There is no participants able</string>

    <string name="zone_list_menu_sort_alphabetically">Sort alphabetically</string>
    <string name="zone_list_menu_sort_by_timezone">Sort by time zone</string>
    <string name="remainders_label">Remainders</string>

</resources>
